style.css
:root {
  --grey: #d9d9d9;
  --blue: #6fbaff;
  --red: #ff5454;
  --green: #5aff54;
}

body {
  font-family: quicksand, sans-serif;
  height: 100vh;
  margin: 0;
  display: grid;
  grid-template-rows: 150px 1fr 50px; /*300px*/
}

button {
  font-size: 20px;
  padding: 15px;
  font-family: quicksand, sans-serif;
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
}
h1 {
  font-size: 35px;
  font-weight: 400;
}

main {
  display: grid;
  grid-template-rows: 300px 1fr;
}
form {
  display: grid;
  grid-template-rows: 200px 100px;
  align-items: center;
  justify-items: center;
}
fieldset {
  grid-row: 1;
  height: 100px;
  padding: 10px;
  width: auto;
  border: none;
  display: flex;
  flex-direction: column;
}
label {
  font-size: 20px;
  margin-bottom: 15px;
}

input {
  max-width: 300px;
}
select {
  max-width: 120px;
  background-color: white;
}
input,
select {
  font-size: 15px;
  font-family: quicksand, sans-serif;
  padding: 5px;
  border: none;
  border-bottom: var(--grey) solid 3px;
}
small {
  margin-top: 5px;
}

.button-section {
  grid-row: 2;
  grid-column: 2;
  display: flex;
  justify-content: center;
}
.button-add {
  width: 160px;
  height: 50px;
  padding: 0;
  color: white;
  background-color: var(--blue);
  border: none;
}

.book-section {
  display: flex;
  align-items: center;
  justify-content: center;
}

.book-div {
  width: 300px;
  height: 300px;
  padding: 0 10px;
  background-color: white;
  border: solid var(--grey);
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.align-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.button-read {
  margin: 15px;
  border: solid var(--grey);
  background-color: white;
}
.button-delete {
  width: 180px;
  color: white;
  background-color: var(--red);
  border: none;
}

footer {
  grid-row: 4;
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 10px;
}
a:-webkit-any-link {
  color: black;
}

button:active {
  opacity: 70%;
}

.error {
  border-bottom: var(--red) solid 3px
}
.success {
  border-bottom: var(--green) solid 3px
}

